fix. carousel logic & style. max width set to prevent to much stretching. Host style fixed

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -12,7 +12,6 @@
 
   &__track {
     display: flex;
-    width: 100%;
     transition: transform 0.5s ease;
   }
 
