--- a/src/styles/components/_host.scss
+++ b/src/styles/components/_host.scss
@@ -7,6 +7,7 @@
   
     p {
       color: $primary-color;
+      text-align: right;
       font-weight: 500;
       margin: 0;
     }
