--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0 auto;
   
     .layout__content {
       flex: 1;
