--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -21,6 +21,7 @@ html, body {
   background-color: #ffffff;
   padding: 24px 0px 32px 0px;
   width: 85%;
+  max-width: 1550px;
   margin: 0 auto;
 }
 @media (max-width: 880px) {
@@ -89,6 +90,7 @@ html, body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin: 0 auto;
 }
 .layout .layout__content {
   flex: 1;
@@ -232,7 +234,6 @@ html, body {
 }
 .carousel__track {
   display: flex;
-  width: 100%;
   transition: transform 0.5s ease;
 }
 .carousel__image {
@@ -330,6 +331,7 @@ html, body {
 }
 .host p {
   color: #ff6060;
+  text-align: right;
   font-weight: 500;
   margin: 0;
 }
@@ -362,6 +364,7 @@ html, body {
 .home {
   text-align: center;
   width: 85%;
+  max-width: 1550px;
   margin: 0 auto;
 }
 @media (max-width: 880px) {
@@ -376,6 +379,7 @@ html, body {
 
 .about {
   width: 85%;
+  max-width: 1550px;
   margin: 0 auto;
 }
 @media (max-width: 880px) {
@@ -397,6 +401,7 @@ html, body {
 
 .accomodation {
   width: 85%;
+  max-width: 1550px;
   margin: 0 auto;
 }
 @media (max-width: 880px) {
