--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,6 +1,7 @@
 // src/styles/_about.scss
 .about {
     width: 85%;
+    max-width: 1550px;
     margin: 0 auto;
 
     @media (max-width: 880px) {
