--- a/src/styles/pages/_accomodation.scss
+++ b/src/styles/pages/_accomodation.scss
@@ -1,5 +1,6 @@
 .accomodation {
   width: 85%;
+  max-width: 1550px;
   margin: 0 auto;
 
   @media (max-width: 880px) {
