--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -3,6 +3,7 @@
 .home {
     text-align: center;
     width: 85%;
+    max-width: 1550px;
     margin: 0 auto;
 
     @media (max-width: 880px) {
